# LinOTP

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitreview  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  DEVELOP.md  Develop.md  Dockerfile  Dockerfile.builder  Dockerfile.pypi-testenv  LICENSE.md  MANIFEST.in  Makefile  Makefile.linotp  README.md  babel.cfg  changelog  compose.e2etests.yml  compose.yaml  docker-compose.yml  linotpapp.py  preprocessor.ini  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-prod.txt  requirements-test.txt  requirements.txt  rules.pl  setup.cfg  setup.py
adminclient/: Makefile  bdist-windows-installers.bat  install-admin.sh  install.sh
adminclient/LinOTPAdminClientCLI/src/: 99-linotp.rules  MANIFEST.in  Makefile  linotpadm.py  setup.cfg  setup.py
adminclient/LinOTPAdminClientGUI/src/: MANIFEST.in  Makefile  README  glinotpadm.glade  glinotpadm.py  glinotpadm.py.1  setup.cfg  setup.py
adminclient/python-yubico/src/: COPYING
adminclient/src/: LinOTP-TestToken.xml  Makefile  install.sh
adminclient/src/LinOTPAdminClientCLI/: MANIFEST.in  Makefile  Readme.rst  linotpadm.py  setup.py
adminclient/src/LinOTPAdminClientGUI/: MANIFEST.in  Makefile  README  glinotpadm.glade  glinotpadm.py  setup.cfg  setup.py
adminclient/src/python-yubico/: Makefile  README  setup.py
api-doc/: Makefile
api-doc/source/: conf.py
auth_modules/src/: Makefile
auth_modules/src/freeradius/: Changelog.linotp  (+3 more)
auth_modules/src/freeradius/src/rlm_linotp2/: Makefile.in  config.h  config.h.in  configure  configure.in  linotp  linotp2.conf  rlm_linotp2.c
auth_modules/src/libpam-linotp/: INSTALL.txt  Makefile.am  README  README.txt  autogen.sh  configure.ac  install_libpam-linotp.sh
auth_modules/src/libpam-linotp/debian/: changelog  control  rules
auth_modules/src/libpam-linotp/src/: Makefile.am  pam_linotp.c  zeromem.c  zeromem.h
ci/: Dockerfile.debian-base  Dockerfile.linotp  copy-to-golden  deb-upload-check  dput.cf  run_functional.sh  update-debian-changelog
config/: apache-docker.conf.tmpl  linotp-cfg-default  linotp-docker.cfg.tmpl  linotpapp.wsgi
config/apache-site-includes/: README.txt
config/docker-initscripts.d/: 10-write-linotp-cfg  50-init-linotp
config/etc/: linotp.cfg
config/share/: linotp.cfg
data/testdata/: meathome.lic
debian/: changelog  config  control  copyright  dirs  linotp.tmpfile  postinst  postrm  prerm  py3dist-overrides  rules  templates
debian/dbconfig-common/: db-install  dbconfig-common-lib.sh
debian/po/: POTFILES.in  templates.pot
docker/: Dockerfile.builder-deb  Dockerfile.linotp  Dockerfile.linotp-deb  Dockerfile.linotp-testenv  Dockerfile.linotp-testimg  Dockerfile.testenv-pypi  compose.e2etests.yml  compose.yaml
docker/linotp/: doas.conf  entrypoint.sh  install-ca-certificates.sh  wait_for_db.py
docker_new/: DEVELOP.md  Dockerfile  entrypoint.sh  requirements.txt  symlink_custom_assets.py  translations.sh
examples/: apache-site.conf  mailtemplate-set-pin.eml
jenkins/: Jenkinsfile  pipeline.groovy
linotp/: __init__.py  app.py  def-passwd  flap.py  settings.py
linotp/cli/: __init__.py  admin_cmd.py  audit_cmd.py  dbsnapshot_cmd.py  init_cmd.py  local_admins_cmd.py  mysql_cmd.py  support_cmd.py
linotp/controllers/: __init__.py  admin.py  audit.py  auditlog.py  auth.py  base.py  error.py  gettoken.py  helpdesk.py  maintenance.py  manage.py  migrate.py  monitoring.py  realms.py  reporting.py  resolvers.py  selfservice.py  system.py  test.py  testing.py  tokens.py  tools.py  u2f.py  userservice.py  validate.py
linotp/lib/: HMAC.py  __init__.py  apps.py  cache.py  cache_utils.py  challenges.py  context.py  error.py  fs_utils.py  local.py  log.py  logs.py  migrate.py  module_loader.py  monitoring.py  pairing.py  realm.py  registry.py  remote_service.py  reply.py  reporting.py  request.py  resolver.py  resources.py  rw_lock.py  secret_obj.py  selfservice.py  support.py  text_utils.py  token.py  tokeniterator.py  type_utils.py  user.py  useriterator.py  userservice.py  util.py
linotp/middlewares/: __init__.py  trusted_proxy_handler.py
linotp/model/: __init__.py  challange.py  config.py  db_logging.py  imported_user.py  local_admin_user.py  migrate.py  realm.py  reporting.py  resolver.py  token.py  tokenRealm.py
linotp/provider/: __init__.py  config_parsing.py  create_provider_ini.py  notification.py  provider_base.py
linotp/templates/: auth-base.mako  auth-challenge-response.mako  auth-ocra2.mako  auth-push.mako  auth-qrtoken.mako  auth.mako  auth3.mako
linotp/tests/: Dockerfile  __init__.py  common-vars.mk  conftest.py  test_additionals.py  test_sql_connect_str.py
linotp/tokens/: __init__.py  emailtoken.mako  emailtoken.py  forwardtoken.mako  forwardtoken.py  hmactoken.mako  hmactoken.py  passwordtoken.mako  passwordtoken.py  radiustoken.mako  radiustoken.py  remotetoken.mako  remotetoken.py  smstoken.mako  smstoken.py  spasstoken.mako  spasstoken.py  tagespassworttoken.mako  tagespassworttoken.py  totptoken.mako  totptoken.py  yubicotoken.mako  yubicotoken.py  yubikeytoken.py
linotp/useridresolver/: HTTPIdResolver.py  LDAPIdResolver.py  PasswdIdResolver.py  SQLIdResolver.py  UserIdResolver.py  __init__.py
linotpd/: install-linotpd.sh
linotpd/src/: DEVELOP.md  Dockerfile  MANIFEST.in  Makefile  README.md  README.txt  Readme.rst  alembic.ini  development.ini.sample  docker-compose.yml  ez_setup.py  functional_tc.ini  linotpapp.py  my-passwd  setup.cfg  setup.py  start.sh  test-background.sh  test-codecover.sh  test-ee.sh  test.ini  test.sh
man/man1/: linotp-audit-cleanup.1  linotp-audit-janitor.1  linotp-backup.1  linotp-config.1  linotp-dbsnapshot.1  linotp-init.1  linotp-local-admins.1  linotp.1
smsprovider/: install-smsprovider.sh
smsprovider/src/: Makefile  setup.cfg  setup.py
tools/: README.md  linotp-create-htdigest
tools/fido2-enroll/: README.md  pyproject.toml
tools/fido2-enroll/src/fido2_enroll/: __init__.py  enroll.py  main.py
useridresolver/src/: DESCRIPTION  MANIFEST.in  Makefile  Readme.rst  setup.cfg  setup.py
(+1565 files in other folders)
