dnl
dnl  LinOTP - the open source solution for two factor authentication
dnl  Copyright (C) 2010 - 2017 KeyIdentity GmbH
dnl
dnl  This file is part of LinOTP authentication modules.
dnl
dnl  This program is free software: you can redistribute it and/or modify
dnl  it under the terms of the GNU General Public License as published by
dnl  the Free Software Foundation, either version 2 of the License, or
dnl  (at your option) any later version.
dnl
dnl  This program is distributed in the hope that it will be useful,
dnl  but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl  GNU General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program.  If not, see <http://www.gnu.org/licenses/>.
dnl
dnl   E-mail: linotp@lsexperts.de
dnl   Contact: www.linotp.org
dnl   Support: www.lsexperts.de
dnl

AC_INIT(rlm_linotp2.c)
AC_REVISION($Revision: 1.4 $)
AC_DEFUN(modname,[rlm_linotp2])
AC_PREREQ([2.50])

fail=
if test x$with_[]modname != xno; then
	AC_PROG_CC
	AC_PROG_CPP

        AC_CHECK_LIB(curl, curl_global_init,
                [ linotp2_ldflags="$linotp2_ldflags -lcurl" ],
                [ fail="$fail curl" ])

	targetname=modname
else
	targetname=
	echo \*\*\* module modname is disabled.
fi

if test x"$fail" != x""; then
	if test x"${enable_strict_dependencies}" = x"yes"; then
		AC_MSG_ERROR([set --without-]modname[ to disable it explicitly.])
	else
		AC_MSG_WARN([silently not building ]modname[.])
		AC_MSG_WARN([FAILURE: ]modname[ requires: $fail.]); 
		targetname=""
	fi
fi

AC_SUBST(linotp2_ldflags)
AC_SUBST(linotp2_cflags)
AC_SUBST(targetname)
AC_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile)
